--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- TODO: Set the document title to the name of your application -->
+    <title>sin</title>
+    <meta name="description" content="sin" />
+    <meta name="author" content="t.me/mysqltable" />
+
+    <!-- TODO: Update og:title to match your application name -->
+    <meta property="og:title" content="Sin" />
+    <meta property="og:description" content="Sin" />
+    <meta property="og:type" content="website" />
+    
+    <meta name="twitter:site" content="t.me/mysqltable" />
+  </head>
+
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
+</html>
+
 
